--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -12,4 +12,4 @@ EXPOSE 5000
 
 WORKDIR /app/src
 
-CMD ["uvicorn", "app:router", "--host", "0.0.0.0", "--port", "5000"]
+CMD ["uvicorn", "app:router", "--host", "0.0.0.0", "--port", "5000", "--reload"]
